# lz-app-backend

./: .gitignore  Dockerfile  black_format_all.sh  entrypoint.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 2ccd15da92a7_add_rehearsal_duration_column.py  2d7f0f0f5927_create_post_and_rehearsal_tables.py  647600f4fc82_change_likes_type.py  7abada8b6002_create_all_tables.py  ce9c913490fc_fix_postcomment_model.py  dc07554b1b00_delete_mistaken_columns.py
app/: config.py  database.py  main.py
app/api/: api.py
app/api/dependencies/: user.py
app/api/endpoints/: auth.py  permission.py  post.py  rehearsal.py  role.py  user.py
app/crud/: permission.py  post.py  rehearsal.py  role.py  session.py  user.py
app/models/: __init__.py  post.py  rehearsal.py  user.py
app/schemas/: auth.py  permission.py  post.py  rehearsal.py  role.py  user.py
app/utils/: auth.py  types.py
